fix for letter-spacing bug on faq page

--- a/studebaker/studebaker.css
+++ b/studebaker/studebaker.css
@@ -1,7 +1,7 @@
-/* $Header: /cvsroot/bitweaver/_bit_styles/studebaker/studebaker.css,v 1.41 2008/08/12 18:46:22 laetzer Exp $ */
+/* $Header: /cvsroot/bitweaver/_bit_styles/studebaker/studebaker.css,v 1.42 2008/08/17 03:05:58 laetzer Exp $ */
 /**
  * @author   xing <xing@synapse.plus.com>
- * @version  $Revision: 1.41 $
+ * @version  $Revision: 1.42 $
  * @theme    essential
  * @license  LGPL
  *
@@ -389,7 +389,7 @@ div.faqtoc h3	{font-size:1.6em}
 div.faqtoc ul	{margin-bottom:1.5em}
 div.faqtoc ul li	{font-weight:bold}
 div.faqtoc ul li li	{font-weight:normal}
-div.bitweaverfaq h2	{font-size:1em; font-weight:bold; border-bottom:1px solid #9f763c; margin-top:2em}
+div.bitweaverfaq h2	{font-size:1em; font-weight:bold; border-bottom:1px solid #9f763c; margin-top:2em;letter-spacing:-0px}
 
 div.bitbox.r2	{border-color:#9f763c}
 div.bitbox.stub	{border-color:#326cae}
@@ -468,7 +468,7 @@ div.module.packtaward2008 h3 	{background:#eeeeee;display:inline;border-bottom:3
 div.module.packtaward2008 div 	{padding:16px 0 14px 16px}
 
 /* bugs */
-div.spell_container 	{max-width:600px !important}
+div.spell_container 	{max-width:42em !important}
 #treasury ul.data img.thumb 	{max-width:160px}
 td pre 	{max-width:555px;overflow:auto}
 
@@ -504,7 +504,7 @@ div.blocks3  #wrapper	{width: 70%}
 div.blocks2e #wrapper	{width:100%}
 div.blocks2n #wrapper	{width: 70%}
 div.blocks1  #wrapper	{width:100%}
-#navigation	{float:right;width:29%}
+#navigation	{float:right;width:29%;max-width:24em}
 #extra	{clear:both;width:100%}
 
 #content 	{padding-right:14px}
